# baby_calls

./: .dockerignore  .gitignore  CLAUDE.md  README.md  dockerfile  pyproject.toml  run_docker.sh
src/: config.py  config_sdialog.py  dataset_operations.py  generate_keywords.py  generate_keywords_langchain.py  generate_summary.py  generate_summary_langchain.py  generate_transcription.py  generate_transcription_langchain.py  logger.py  openai_api.py  sdialog_generate_transcription.py  utils.py
src/llms/: __init__.py  huggingface_client.py  llm_factory.py  llm_interface.py  ollama_client.py  openai_api.py
tests/: test_dataset_operations.py  test_llm_factory.py  test_utils.py
tests/llms/: test_huggingface_client.py  test_ollama_client.py  test_openai_api.py
