[tool.poetry]
name = "baby-calls"
version = "0.1.0"
description = ""
authors = ["stefan dragicevic <stefand998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
openai = "^2.4.0"
python-dotenv = "^1.1.1"
torch = "^2.9.0"
transformers = "^4.57.1"
sentencepiece = "^0.2.1"
protobuf = "^6.33.0"
sdialog = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
